see if it is rohan heh he he

--- a/regularization part 1.ipynb
+++ b/regularization part 1.ipynb
@@ -462,6 +462,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**rio**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
